parent update component added

--- a/frontend/my-react-app/public/index.html
+++ b/frontend/my-react-app/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Jinsei.ai | Global Standards Based Business Reporting Pipelines.e">
+    <meta property="og:description" content="Jinsei.ai | Global Standards Based Business Reporting Pipelines.">
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png">
+
     <meta
       name="description"
       content="Web site created using create-react-app"
