--- a/frontend/my-react-app/public/index.html
+++ b/frontend/my-react-app/public/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:title" content="Jinsei.ai | Global Standards Based Business Reporting Pipelines.e">
+    <meta property="og:title" content="Jinsei.ai | Lucaiano.e">
     <meta property="og:description" content="Jinsei.ai | Global Standards Based Business Reporting Pipelines.e">
-    <meta property="og:image" content="%PUBLIC_URL%/preview.png">
+    <meta property="og:image" content="./preview.png">
 
     <meta
       name="description"
