user sign in displays their name in header, needs backend connection

--- a/frontend/my-react-app/public/index.html
+++ b/frontend/my-react-app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Jinsei.ai | Lucaiano.e">
     <meta property="og:description" content="Jinsei.ai | Global Standards Based Business Reporting Pipelines.e">
-    <meta property="og:image" content="./preview.png">
+    <meta property="og:image" content="./preview179.png">
 
     <meta
       name="description"
