--- a/frontend/my-react-app/public/index.html
+++ b/frontend/my-react-app/public/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:title" content="Jinsei.ai | Standards Based Financial Modeling and Process Management">
-    <meta property="og:description" content="Jinsei.ai | Standards Based Financial Modeling and Process Management">
+    <meta property="og:title" content="Jinsei.ai | AI ERP Taxonomy Capture and Process Management">
+    <meta property="og:description" content="Jinsei.ai | AI ERP Taxonomy Capture and Process Management">
     <meta property="og:image" content="./preview179.png">
 
     <meta
       name="description"
-      content="Standards Based Financial Modeling and Process Management."
+      content="AI ERP Taxonomy Capture and Process Management."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <!--
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jinsei.ai | Standards Based Financial Modeling and Process Management.
+    <title>Jinsei.ai | AI ERP Taxonomy Capture and Process Management.
 </title>
   </head>
   <body>
