pre preview added

--- a/frontend/my-react-app/public/index.html
+++ b/frontend/my-react-app/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta property="og:title" content="Jinsei.ai | Automation Hub">
     <meta property="og:description" content="Jinsei.ai | Automation Hub">
-    <meta property="og:image" content="./previewModern.png">
+    <meta property="og:image" content="./preview.png">
 
     <meta
       name="description"
